--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "scripts": {
-    "deploy": "vercel",
     "start": "node public/index.js",
     "build": "tsc && tsc-alias",
-    "dev": "tsx watch src/index.ts",
-    "check": "tsc --noEmit",
-    "generate": "prisma generate --no-engine",
-    "postinstall": "prisma generate --no-engine"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "deploy": "vercel",
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
