--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "name": "discord-clone-api",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "start": "node public/index.js",
     "build": "tsc && tsc-alias",
     "deploy": "vercel",
     "dev": "tsx watch src/index.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
