--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.19",
+    "prisma-dbml-generator": "^0.12.0",
     "tsc-alias": "^1.8.8",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
