--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "discord-clone-api",
-  "version": "0.0.0",
+  "main": "index.js",
   "scripts": {
+    "deploy": "vercel",
     "start": "node public/index.js",
     "build": "tsc && tsc-alias",
-    "deploy": "vercel",
     "dev": "tsx watch src/index.ts",
     "check": "tsc --noEmit",
     "generate": "prisma generate --no-engine",
-    "postinstall": "prisma generate --no-engine"
+    "postinstall": "prisma generate --no-engine",
+    "email": "email dev --dir src/emails"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@hono/node-server": "^1.7.0",
+    "@aws-sdk/client-s3": "^3.515.0",
+    "@aws-sdk/s3-request-presigner": "^3.515.0",
+    "@hono/node-server": "^1.8.1",
     "@hono/zod-validator": "^0.1.11",
     "@prisma/client": "^5.9.1",
-    "@react-email/components": "0.0.12",
-    "@react-email/render": "0.0.10",
-    "@types/react": "^18.2.55",
+    "@react-email/components": "0.0.14",
+    "@react-email/render": "0.0.12",
+    "@types/multer": "^1.4.11",
+    "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.4",
-    "hono": "^3.12.0",
+    "dotenv": "^16.4.5",
+    "hono": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.9",
     "prisma": "^5.9.1",
-    "react-email": "^1.10.0",
+    "react": "^18.2.0",
+    "react-email": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.14",
     "prisma-dbml-generator": "^0.12.0",
     "tsc-alias": "^1.8.8",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
-    "vercel": "^33.5.1"
+    "typescript": "^5.3.3"
   }
 }
