--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*", "api/index.ts"],
+  "include": ["src/**/*", "src/index.ts"],
   "exclude": ["node_modules"]
 }
