--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
+  "functions": {
+    "api/index.js": {
+      "runtime": "@vercel/node@3.0.19"
+    }
+  },
   "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
