--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "index.js",
   "scripts": {
+    "start": "node public/index.js",
     "deploy": "vercel",
     "build": "tsc && tsc-alias",
     "dev": "tsx watch src/index.ts",
